# Flip_BMP-1_Image

./: main.c
x86/: CMakeLists.txt  flipdiagbmp1.asm
x86-64/: .gdbinit  CMakeLists.txt  flipdiagbmp1.asm  main.c
